// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`스냅샷: 전체 점수 회귀 방지 > 기초진단 관점 점수 스냅샷 1`] = `
[
  {
    "name": "사회적성과",
    "score": 3.28,
  },
  {
    "name": "경제적성과",
    "score": 3,
  },
  {
    "name": "혁신성과",
    "score": 4,
  },
]
`;

exports[`스냅샷: 전체 점수 회귀 방지 > 기초진단 그래프 요인 점수 스냅샷 1`] = `
[
  {
    "group": "조직미션",
    "name": "소셜미션",
    "score": 4,
  },
  {
    "group": "조직미션",
    "name": "사업계획수립",
    "score": 5,
  },
  {
    "group": "사업활동",
    "name": "기업의 사회적가치",
    "score": 1.5,
  },
  {
    "group": "사업활동",
    "name": "사회적경제기업 협력",
    "score": 5,
  },
  {
    "group": "사업활동",
    "name": "지역협력",
    "score": 0.5,
  },
  {
    "group": "사업활동",
    "name": "사회환원",
    "score": 4,
  },
  {
    "group": "조직운영",
    "name": "민주적 의사결정 구조",
    "score": 5,
  },
  {
    "group": "조직운영",
    "name": "고용",
    "score": 0.5,
  },
  {
    "group": "조직운영",
    "name": "내부역량향상",
    "score": 3,
  },
  {
    "group": "재정성과",
    "name": "비즈니스모델",
    "score": 3,
  },
  {
    "group": "기업혁신",
    "name": "성장잠재력",
    "score": 5,
  },
  {
    "group": "기업혁신",
    "name": "사업아이템",
    "score": 3,
  },
  {
    "group": "기업혁신",
    "name": "시장분석",
    "score": 4,
  },
]
`;

exports[`스냅샷: 전체 점수 회귀 방지 > 기초진단 범주 점수 스냅샷 1`] = `
[
  {
    "name": "조직미션",
    "score": 4.5,
  },
  {
    "name": "사업활동",
    "score": 2.5,
  },
  {
    "name": "조직운영",
    "score": 2.83,
  },
  {
    "name": "재정성과",
    "score": 3,
  },
  {
    "name": "기업혁신",
    "score": 4,
  },
]
`;

exports[`스냅샷: 전체 점수 회귀 방지 > 기초진단 코드 스냅샷 1`] = `"21222"`;

exports[`스냅샷: 전체 점수 회귀 방지 > 심화진단 관점 점수 스냅샷 1`] = `
[
  {
    "name": "사회적성과",
    "score": 3.11,
  },
  {
    "name": "경제적성과",
    "score": 3.25,
  },
  {
    "name": "혁신성과",
    "score": 3.5,
  },
]
`;

exports[`스냅샷: 전체 점수 회귀 방지 > 심화진단 그래프 요인 점수 스냅샷 1`] = `
[
  {
    "group": "조직미션",
    "name": "소셜미션",
    "score": 3,
  },
  {
    "group": "조직미션",
    "name": "사업계획수립",
    "score": 3.5,
  },
  {
    "group": "사업활동",
    "name": "기업의 사회적가치",
    "score": 4.17,
  },
  {
    "group": "사업활동",
    "name": "사회적경제기업 협력",
    "score": 4.5,
  },
  {
    "group": "사업활동",
    "name": "지역협력",
    "score": 0.5,
  },
  {
    "group": "사업활동",
    "name": "사회환원",
    "score": 1.38,
  },
  {
    "group": "조직운영",
    "name": "민주적 의사결정 구조",
    "score": 5,
  },
  {
    "group": "조직운영",
    "name": "고용",
    "score": 1.25,
  },
  {
    "group": "조직운영",
    "name": "내부역량향상",
    "score": 4.25,
  },
  {
    "group": "재정성과",
    "name": "비즈니스모델",
    "score": 2.67,
  },
  {
    "group": "재정성과",
    "name": "경제적성과",
    "score": 5,
  },
  {
    "group": "기업혁신",
    "name": "성장잠재력",
    "score": 5,
  },
  {
    "group": "기업혁신",
    "name": "사업아이템",
    "score": 2,
  },
  {
    "group": "기업혁신",
    "name": "시장분석",
    "score": 4.5,
  },
  {
    "group": "기업혁신",
    "name": "혁신노력",
    "score": 3,
  },
]
`;

exports[`스냅샷: 전체 점수 회귀 방지 > 심화진단 범주 점수 스냅샷 1`] = `
[
  {
    "name": "조직미션",
    "score": 3.25,
  },
  {
    "name": "사업활동",
    "score": 2.89,
  },
  {
    "name": "조직운영",
    "score": 3.2,
  },
  {
    "name": "재정성과",
    "score": 3.25,
  },
  {
    "name": "기업혁신",
    "score": 3.5,
  },
]
`;

exports[`스냅샷: 전체 점수 회귀 방지 > 심화진단 코드 스냅샷 1`] = `"21222"`;
